# planx-new

./: .dockerignore  .env  .env.development.local  .env.example  .env.staging  .env.staging.example  .gitattributes  .gitignore  .prettierignore  AGENTS.md  Caddyfile  Pulumi.yaml  README.md  TEAM_MIGRATION_PLAN.md  caddy2.10_logs_mem.txt  caddy2.10_logs_mem_new.txt  coolfile  docker-compose.e2e.yml  docker-compose.local.yml  docker-compose.pizza.failover.yml  docker-compose.pizza.yml  docker-compose.prod.yml  docker-compose.seed.yml  docker-compose.staging.yml  docker-compose.yml  index.ts  local-test.sh  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json  wales_gis_proposal.md
.github/: dependabot.yml  remove-old-artifacts.yml
.husky/: pre-commit  pre-push
DocumentReview/: index.html  package.json  tsconfig.json  vite.config.ts
api.planx.uk/: .env.test  .env.test.example  .eslintrc  .gitignore  .pnpmrc  .swcrc  Dockerfile  Dockerfile.prod  README.md  airbrake.js  airbrake.ts  auth.js  babel.config.json  codegen.ts  cors.ts  find.js  findReplace.js  findReplace.test.js  generate-types.sh  helpers.js  helpers.test.ts  helpers.ts  index.js  index.ts  jest.config.js  jest.config.ts  jest.setup.js  package.json  pnpm-lock.yaml  publish.js  publish.test.js  rateLimit.js  rateLimit.ts  routes.js  s3.js  send.js  server.js  server.test.js  server.ts  session.ts  (+6 more)
client/: .eslintrc  (+6 more)
infrastructure/performance/: README.md  base_workload.py  pyproject.toml  run_locust.sh  run_tests.sh  test_api.py  test_hasura.py  test_splash.py  utils.py
(+6578 files in other folders)
